tests/error/type_match/base_case_array_to_slice_const_propagation1.bz
function test()
{
	const arr = [32: int32]();
	let _: [: int32] = arr;
}
